# survey-ops

./: .gitignore  README.md  experiment_results  pyproject.toml  run_plotting.sh
blancops/: __init__.py
configs/: global_config.json  global_config_new.json  template_config.json
data/: 2013-09-15_gband_fields.json  2013-09-15_gband_schedule.csv  2014-12-15_bins2radec.json  2014-12-15_fields2radec.json  2014-12-15_schedule.csv  default_config.json  field2name.json  field2nvisits.json  (+13 more)
survey_ops/: __init__.py  agents.py  algorithms.py  environments.py  eval.py  offline_dataset.py  plotting.py  pyproject.toml  train.py
survey_ops/algorithms/: __init__.py  algorithms.py  factory.py
survey_ops/configs/: global_config.json
survey_ops/coreRL/: agents.py  data_loading.py  data_processing.py  environments.py  neural_nets.py  offline_dataset.py  survey_logic.py  transformations.py
survey_ops/core_rl/: __init__.py  agents.py  environments.py  neural_nets.py
survey_ops/data_processing/: offline_dataset.py
survey_ops/data_quality/: __init__.py  decam_sky.conf  seeing.py  sky_brightness.py  sky_transmission.py
survey_ops/ephemerides/: __init__.py
survey_ops/math/: __init__.py  units.py
survey_ops/plotting/: __init__.py
survey_ops/scripts/: eval.py  schedule.py  train.py
survey_ops/src/: __init__.py  agents.py  algorithms.py  config_constants.py  environments.py  eval_utils.py  neural_nets.py  offline_dataset.py
survey_ops/utils/: __init__.py  config.py  ephemerides.py  geometry.py  interpolate.py  pytorch_utils.py  script_utils.py  sys_utils.py  units.py
(+229 files in other folders)
