# pyproject.toml
[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "blancops"
version = "0.1.0"

[tool.setuptools.packages.find]
include = ["blancops*"]

[project.scripts]
model-init = "blancops.scripts.init:main"
model-train = "blancops.scripts.train:main"
model-eval = "blancops.scripts.eval:main"
model-schedule = "blancops.scripts.schedule:main"

[tool.setuptools.package-data]
"blancops.configs" = ["*.json"]
